--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </defs>
         </svg>
       </div>
-      <div class="card-content">
+      <article class="card-content">
         <div class="card-tag">
           Learning
         </div>
@@ -66,11 +66,13 @@
         <div class="card-description">
           These languages are the backbone of every website, defining structure, content, and presentation.
         </div>
-      </div>
-      <div class="card-author">
-        <img class="avatar" src="assets/images/image-avatar.webp" alt="user-avatar">
-        <div class="name">Greg Hooper</div>
-      </div>
+      </article>
+      
+      <section class="card-author" aria-labelledby="author-title">
+        <img class="avatar" src="assets/images/image-avatar.webp" alt="user avatar">
+        <div class="name" id="author-title">Greg Hooper</div>
+      </section>
+      
     </div>
   </main>
   <!-- Footer landmark for footer content -->
