--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <div class="card-date">
           Published 21 Dec 2023
         </div>
-        <div class="card-title">
+        <h1 class="card-title">
           <a href="#">HTML & CSS foundations</a>
-        </div>
+        </h1>
         <div class="card-description">
           These languages are the backbone of every website, defining structure, content, and presentation.
         </div>
