Added h3 to author section

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       
       <section class="card-author" aria-labelledby="author-title">
         <img class="avatar" src="assets/images/image-avatar.webp" alt="user avatar">
-        <div class="name" id="author-title">Greg Hooper</div>
+        <h3 class="name" id="author-title">Greg Hooper</h3>
       </section>
       
     </div>
